syntax = "proto3";

option go_package = "internal/pb/hello;hello";

service HelloService {
  rpc SeyHello(HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}